--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
     <br>
     <button onclick="speakText()">Play Text as Audio</button>
 
+    <p>Made by Pranish</p>
+
     <script>
         function speakText() {
             const text = document.getElementById("text-input").value;
