--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Text to Speech</title>
+    <title>Text to Speech with Audio Tag</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -34,51 +34,53 @@
     </style>
 </head>
 <body>
-    <h1>Text to Speech Converter</h1>
+    <h1>Text to Speech with Audio Tag</h1>
     <textarea id="text-input" placeholder="Type your text here..."></textarea>
     <br>
-    <button onclick="speakText()">Play Text as Audio</button>
-
-    <p>Made by Pranish</p>
+    <button onclick="playText()">Play Text as Audio</button>
+    <br><br>
+    <audio id="audio" controls></audio>
 
     <script>
-        function speakText() {
+        function playText() {
             const text = document.getElementById("text-input").value;
             if (!text) {
                 alert("Please enter some text to convert to speech.");
                 return;
             }
 
+            // Use the Web Speech API to convert text to speech
             const speechSynthesis = window.speechSynthesis;
             const speech = new SpeechSynthesisUtterance(text);
-            speech.lang = "en-US"; // Set language, e.g., en-US for English
+            speech.lang = "en-US";
 
-            // Set the speaking rate and pitch
-            speech.rate = 1;
-            speech.pitch = 1;
+            // Create a temporary audio file by capturing the speech synthesis output
+            const audio = document.getElementById("audio");
+            const audioContext = new (window.AudioContext || window.webkitAudioContext)();
+            const destination = audioContext.createMediaStreamDestination();
+            const mediaRecorder = new MediaRecorder(destination.stream);
 
-            // Try to select a voice similar to Google Translate's female voice
-            const voices = speechSynthesis.getVoices();
-            const preferredVoices = [
-                "Google US English", // Common on Chrome
-                "Microsoft Zira Desktop - English (United States)", // Windows-specific
-                "Samantha", // macOS-specific
-            ];
-            
-            const selectedVoice = voices.find(voice => preferredVoices.includes(voice.name)) || voices.find(voice => voice.lang === "en-US" && voice.name.includes("Female"));
+            const audioChunks = [];
 
-            // If a suitable voice is found, set it
-            if (selectedVoice) {
-                speech.voice = selectedVoice;
-            }
+            mediaRecorder.ondataavailable = (event) => {
+                audioChunks.push(event.data);
+            };
 
+            mediaRecorder.onstop = () => {
+                const audioBlob = new Blob(audioChunks, { type: "audio/ogg; codecs=opus" });
+                const audioUrl = URL.createObjectURL(audioBlob);
+                audio.src = audioUrl;
+                audio.play();
+            };
+
+            const utteranceStream = audioContext.createMediaStreamDestination();
             speechSynthesis.speak(speech);
-        }
 
-        // Load voices asynchronously
-        window.speechSynthesis.onvoiceschanged = () => {
-            speechSynthesis.getVoices(); // This triggers the loading of available voices
-        };
+            mediaRecorder.start();
+            speech.onend = () => {
+                mediaRecorder.stop();
+            };
+        }
     </script>
 </body>
 </html>
